force-app/main/default/objects/Connected_Org__c/fields/Admin_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Admin_User_Name__c</fullName>
    <externalId>true</externalId>
    <label>Admin User Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>