force-app/main/default/objects/Connected_Org__c/fields/Admin_User_Password__c.field-meta.xml
<CustomField>
    <fullName>Admin_User_Password__c</fullName>
    <label>Admin User Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>