force-app/main/default/objects/Connected_Org__c/fields/Agentforce_Available__c.field-meta.xml
<CustomField>
    <fullName>Agentforce_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agentforce Available?</label>
    <type>Checkbox</type>
</CustomField>