force-app/main/default/objects/Connected_Org__c/fields/App_URL__c.field-meta.xml
<CustomField>
    <fullName>App_URL__c</fullName>
    <formula>HYPERLINK(&quot;/idp/login?app=&quot; &amp; Connected_App_Id__c , &quot;Click to Login&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>App URL</label>
    <type>Text</type>
</CustomField>