force-app/main/default/objects/Connected_Org__c/fields/Connected_App_Id__c.field-meta.xml
<CustomField>
    <fullName>Connected_App_Id__c</fullName>
    <label>Connected App Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>