force-app/main/default/objects/Connected_Org__c/fields/Data_Cloud_Available__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Cloud Available?</label>
    <type>Checkbox</type>
</CustomField>