force-app/main/default/objects/Connected_Org__c/fields/Github_Repo__c.field-meta.xml
<CustomField>
    <fullName>Github_Repo__c</fullName>
    <label>Github Repo</label>
    <type>Url</type>
</CustomField>