force-app/main/default/objects/Connected_Org__c/fields/IdP_Initiated_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>IdP_Initiated_Login_URL__c</fullName>
    <formula>&quot;https://orgfarm-agentforcemainorg-dev-ed.develop.my.salesforce.com/idp/login?app=&quot; &amp; Connected_App_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IdP Initiated Login URL</label>
    <type>Text</type>
</CustomField>