force-app/main/default/objects/Connected_Org__c/fields/Last_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_Date__c</fullName>
    <label>Last Login Date</label>
    <type>Date</type>
</CustomField>