force-app/main/default/objects/Connected_Org__c/fields/Last_Login_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_Status__c</fullName>
    <label>Last Login Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>