force-app/main/default/objects/Connected_Org__c/fields/Last_Login_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_Time__c</fullName>
    <label>Last Login Time</label>
    <type>DateTime</type>
</CustomField>