force-app/main/default/objects/Connected_Org__c/fields/Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Login_URL__c</fullName>
    <label>Login URL</label>
    <type>Url</type>
</CustomField>