force-app/main/default/objects/Connected_Org__c/fields/Org_Icon__c.field-meta.xml
<CustomField>
    <fullName>Org_Icon__c</fullName>
    <label>Org Icon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>custom:custom17</fullName>
                <default>true</default>
                <label>custom:custom17</label>
            </value>
            <value>
                <fullName>custom:custom9</fullName>
            </value>
            <value>
                <fullName>standard:campaign</fullName>
            </value>
            <value>
                <fullName>utility:animal_and_nature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>