force-app/main/default/objects/Connected_Org__c/fields/SSO_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SSO_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSO Enabled?</label>
    <type>Checkbox</type>
</CustomField>