force-app/main/default/objects/Connected_Org__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Admin_User_Name__c</columns>
    <columns>Admin_User_Password__c</columns>
    <columns>IsActive__c</columns>
    <columns>Connected_App_Id__c</columns>
    <columns>Last_Login_Status__c</columns>
    <columns>Login_URL__c</columns>
    <columns>Last_Login_Date__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>